# siltti

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/fi/zymologia/siltti/: MainActivity.kt  ScreenScaffold.kt  Utils.kt
app/src/main/java/fi/zymologia/siltti/components/: NetworkCard.kt  ScanProgressBar.kt
app/src/main/java/fi/zymologia/siltti/screens/: NetworkManager.kt  NewAddress.kt  ScanScreen.kt
gradle/wrapper/: gradle-wrapper.properties
ios/: README.md  ios_build.sh
ios/Siltti/: Info.plist  NFC.swift  SilttiApp.swift  SilttiUniffi.swift
ios/Siltti.xcodeproj/: project.pbxproj
ios/Siltti.xcodeproj/xcshareddata/xcschemes/: Siltti.xcscheme
ios/Siltti/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Siltti/Screens/: Destination.swift  MainScreen.swift  NetworksScreen.swift  NewAddressScreen.swift  TransmitScreen.swift
ios/Siltti/Utils/: Utils.swift
ios/Siltti/Views/: ScannerView.swift
ios/SilttiUniffiFFI.xcframework/: Info.plist
ios/SilttiUniffiFFI.xcframework/ios-arm64/Headers/: SilttiUniffiFFI.h  module.modulemap
rust/: Cargo.toml
rust/database/: Cargo.toml
rust/database/src/: error.rs  lib.rs  process_input.rs  storage.rs  tests.rs
rust/qr_reader/: Cargo.toml
rust/qr_reader/src/: lib.rs
rust/siltti/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
rust/siltti/src/: database.rs  definitions.rs  error.rs  fetch.rs  ffi_types.rs  lib.rs  process_input.rs  sign_with_companion.rs  siltti.udl  tests.rs
rust/src/: database.rs  definitions.rs  error.rs  fetch.rs  interface.rs  lib.rs  process_input.rs  qr_reader.rs  selector.rs  tests.rs  utils.rs
