[package]
name = "qr_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
raptorq = "1.7.0"
thiserror = "1.0.31"
uniffi = { version = "0.27.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27.0", features = ["build", "cli"] }

[dev-dependencies]
uniffi = { version = "0.27.0", features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
