[package]
name = "siltti"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
qr_reader = { path = "../qr_reader" }
uniffi = { version = "0.24.1", features = ["cli"] }

[build-dependencies]
uniffi_build = { version = "0.24.1", features = ["builtin-bindgen"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
