[package]
name = "siltti"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-metadata = {version = "16.0.0", default-features = false, features = ["current", "decode"]}
hex = "0.4.3"
jsonrpsee = {version = "0.22.2", features = ["ws-client"]}
lazy_static = "1.4.0"
lt-codes = {git = "https://github.com/Alzymologist/LT-codes"}
metadata-shortener = {git = "https://github.com/Alzymologist/metadata-shortener", default-features = false, features = ["proof-gen", "std"], rev = "cf73d6261504af3f042c286ceb37681a0c652d3b"}
parity-scale-codec = {version = "3.6.9", features = ["derive"]}
primitive-types = {version = "0.12.2", default-features = false, features = ["impl-codec"]}
regex = "1.5.4"
scale-info = {version = "2.11.1"}
serde_json = "1.0.81"
sled = "0.34.7"
substrate-crypto-light = {git = "https://github.com/Alzymologist/substrate-crypto-light", default-features = false, features = ["sr25519"], rev = "7d933807f0ffaf150a069266083e8b2fc9cadf69"}
substrate_parser = {git = "https://github.com/Alzymologist/substrate-parser", default-features = false, rev = "65de6a4fe207a64f9857247af4e9f7509fa6de4f"}
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.35"
uniffi = { version = "0.27.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27.0", features = ["build", "cli"] }

[dev-dependencies]
uniffi = { version = "0.27.0", features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
